some changes to test out code

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
    <div id="game">
     <!--Left Empty Intentionally for the Game to show up-->
     <script src="classes.js"></script>
-    <script src="scene.js"></script>
+    <script src="scene-new.js"></script>
    </div>
    </div>
   </body>
